--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <h1>Skills</h1>
             <div class="carousel-container">
                 <div class="carousel">
+                    <!-- Data Visualization -->
                     <div class="carousel-item">
                         <div class="content">
                             <div class="number">01</div>
@@ -98,6 +99,7 @@
                             <p>Creating insightful and interactive visualizations using tools like Tableau and Power BI.</p>
                         </div>
                     </div>
+                    <!-- Machine Learning -->
                     <div class="carousel-item">
                         <div class="content">
                             <div class="number">02</div>
@@ -106,6 +108,7 @@
                             <p>Developing and deploying machine learning models for predictive analytics.</p>
                         </div>
                     </div>
+                    <!-- Programming -->
                     <div class="carousel-item">
                         <div class="content">
                             <div class="number">03</div>
@@ -114,13 +117,81 @@
                             <p>Proficient in Python, SQL, and C++ for data analysis and software development.</p>
                         </div>
                     </div>
-                    <!-- Add more skill items as needed -->
+                    <!-- Statistical Analysis -->
+                    <div class="carousel-item">
+                        <div class="content">
+                            <div class="number">04</div>
+                            <img src="https://img.icons8.com/color/96/000000/statistics.png" alt="Statistical Analysis">
+                            <h3>Statistical Analysis</h3>
+                            <p>Applying statistical techniques to derive insights from data.</p>
+                        </div>
+                    </div>
+                    <!-- Data Wrangling -->
+                    <div class="carousel-item">
+                        <div class="content">
+                            <div class="number">05</div>
+                            <img src="https://img.icons8.com/color/96/000000/data-configuration.png" alt="Data Wrangling">
+                            <h3>Data Wrangling</h3>
+                            <p>Cleaning and preparing data for analysis.</p>
+                        </div>
+                    </div>
+                    <!-- Big Data Technologies -->
+                    <div class="carousel-item">
+                        <div class="content">
+                            <div class="number">06</div>
+                            <img src="https://img.icons8.com/color/96/000000/big-data.png" alt="Big Data Technologies">
+                            <h3>Big Data Technologies</h3>
+                            <p>Utilizing frameworks like Hadoop and Spark for handling large datasets.</p>
+                        </div>
+                    </div>
+                    <!-- Artificial Intelligence -->
+                    <div class="carousel-item">
+                        <div class="content">
+                            <div class="number">07</div>
+                            <img src="https://img.icons8.com/color/96/000000/brain.png" alt="Artificial Intelligence">
+                            <h3>Artificial Intelligence</h3>
+                            <p>Implementing AI methods to automate complex tasks.</p>
+                        </div>
+                    </div>
+                    <!-- Predictive Analytics -->
+                    <div class="carousel-item">
+                        <div class="content">
+                            <div class="number">08</div>
+                            <img src="https://img.icons8.com/color/96/000000/line-chart.png" alt="Predictive Analytics">
+                            <h3>Predictive Analytics</h3>
+                            <p>Using historical data to predict future outcomes.</p>
+                        </div>
+                    </div>
+                    <!-- Natural Language Processing -->
+                    <div class="carousel-item">
+                        <div class="content">
+                            <div class="number">09</div>
+                            <img src="https://img.icons8.com/color/96/000000/natural-language-processing.png" alt="Natural Language Processing">
+                            <h3>Natural Language Processing</h3>
+                            <p>Processing and analyzing large amounts of natural language data.</p>
+                        </div>
+                    </div>
+                    <!-- Deep Learning -->
+                    <div class="carousel-item">
+                        <div class="content">
+                            <div class="number">10</div>
+                            <img src="https://img.icons8.com/color/96/000000/neural-network.png" alt="Deep Learning">
+                            <h3>Deep Learning</h3>
+                            <p>Designing and training deep neural networks for advanced pattern recognition.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="slide-bar">
-                    <div class="slide-indicator active" data-index="0"></div>
+                    <div class="slide-indicator" data-index="0"></div>
                     <div class="slide-indicator" data-index="1"></div>
                     <div class="slide-indicator" data-index="2"></div>
-                    <!-- Add more slide indicators as needed -->
+                    <div class="slide-indicator" data-index="3"></div>
+                    <div class="slide-indicator" data-index="4"></div>
+                    <div class="slide-indicator" data-index="5"></div>
+                    <div class="slide-indicator" data-index="6"></div>
+                    <div class="slide-indicator" data-index="7"></div>
+                    <div class="slide-indicator" data-index="8"></div>
+                    <div class="slide-indicator" data-index="9"></div>
                 </div>
             </div>
         </section>
